--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,37 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-footer {
+  background-color: #ad787f;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  width: 100%;
+}
+
+.footer-icons { 
+  align-items: right;
+  height: 5vh;
+  width: 5vw;
+  padding-left: 1vh;
+}
+
+.footer-text {
+  align-items: left;
+  padding-right: 5vh;
 }
 
 .App-link {
