--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,16 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 90vh;
+  background-image: url("./images/morass_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-footer {
