--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,16 @@
   padding-left: 1vh;
 }
 
-.body-search {
+.body-search-results {
   display: flex;
-  margin-left: auto;
+  padding: 1vh;
+  flex-direction: column;
+  align-items: center;
+  list-style-type: none;
+}
+
+.body-tooltip {
+  display: flex;
   padding: 5vh;
   flex-direction: column;
   align-items: center;
