added scrollable background image so there's no bleeding past 100vh, adding potential/bonus potential component, changed background image to Horny Mushroom, fixed field input bug for equip tooltip.

--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,12 @@
   font-size: 2vh;
 }
 
-.App-header {
+.App-body {
   background-color: #282c34;
-  background-image: url("./images/morass_bg.jpg");
+  background-image: url("./images/hornymushroomdesktop1920x1200.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -33,20 +34,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-}
-
-.App-body {
-  background-color: #282c34;
-  background-image: url("./images/morass_bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(5px + 2vmin);
-  color: black;
+  overflow-y: scroll;
 }
 
 .body-navbar {
